0.2.33 Made Shape process its own XML element and generate SVG strings for use by encapsulating elements.